# Swift-SDL3-Boilerplate

./: CMakeLists.txt  README.md
src/: main.swift  module.modulemap
